--- a/q/274051.html
+++ b/q/274051.html
@@ -26,12 +26,24 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>182</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
-<tr d-ix="1"><td>079</td><td>K ngn/k</td><td>240710T125605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274058#274058">ovs</a></td></tr>
-<tr d-ix="2"><td>572</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
-<tr d-ix="3"><td>041</td><td>Charcoal</td><td>240710T073253Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274054#274054">Neil</a></td></tr>
+<tr d-ix="0"><td>314</td><td>Python 3.8 prerelease</td><td>240710T191252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274062#274062">squarero</a></td></tr>
+<tr d-ix="1"><td>182</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
+<tr d-ix="2"><td>079</td><td>K ngn/k</td><td>240710T125605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274058#274058">ovs</a></td></tr>
+<tr d-ix="3"><td>572</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
+<tr d-ix="4"><td>041</td><td>Charcoal</td><td>240710T073253Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274054#274054">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 182 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 314 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>def f(n):
+ l=[13*n*[' ']for i in range(10*n)];x,y=2*n,0
+ for d in zip([8,6,2,0,2,6],[0,3,3,0,-3,-3]):
+  for s in range(n):l[y][x+3],l[y][x+1],l[y+1][x],l[y+2][x],l[y+1][x+1],l[y+1][x+3],l[y+2][x+2],l[y+3][x+2],l[y+3][x+1],l[y+3][x+3],l[y+1][x+4],l[y+2][x+4]='\/||'*3;x+=d[0]-4;y+=d[1]
+ for L in l:print(''.join(L))
+</code></pre>
+<p>First example is inputted as 1.</p>
+<p><a href="https://tio.run/##XY/dDoIwDIXvfYrd7ceqGyPESHgD32D2wgTRGVIIegHGd8cNjRLTtfuSntOt7XC/NGS3bTeO5alilSC5W7C6cMYqUo4zjlXTMc88se5I55MwWpHEvIehSBSBXrAoKKPg4VvhtpBBAjpkhuA02BAaVjYcjLMn@e03LzxYuwFdv7QIHzIThcv1b0q@ZP76H9ekCGVi@89mxnbmTWfeFAt@2DyfXNm8Xxal07hK8yGSwfeS@/jretd2nu6C8/W18ST2Uo6VSOT4Ag" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 182 bytes</h1>
 <p>Builds the output character by character.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>n=&gt;(y=h=n*6-2,p=n*2-1,g=x=&gt;y?` |/\\
@@ -39,13 +51,13 @@
 </code></pre>
 <p><a href="https://tio.run/##XY5NboMwGET3OYWDGss2dmNstwvCB9dASiIRUX5aIYNCVGwl6dWpu@3qzbzZzNfl@zLX18/pJuz40awtrBZy4qEHy96F4lOgEgnvwEHuiwo99qfTpjqWsAgnJj6Dz/u94jWElhtc5ob/uMIJkU2PMpMPH6TPeqFxXci0SrRUSuqXe3DYb8Gw@pnIRFZHv9PMxKSM/8J2Zgprek7JJMALsdMYKzaHIw4Wbug57oijaRRRssDEDF3b8UqG5oYsAqQOARmgt8A4pui@Qage7TwOzeswdiSyEKEYWXr4N7TE0iCf6y8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 79 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 79 bytes</h1>
 <pre><code>{`0:&quot;\\/|&quot;(3|=8*x).[;;&amp;;+5 4#4\3947690525]/(x+x+!'4 5)+\+-4+9\,/1_'x#'&quot;,EA$&quot;}
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJwFwUESQCAUANB9Fq6QGOEj9EMaCwun8A0rZ2hG7u69Z3nvbhFEKohCh3WufNkezuUODMcUSVucRtuZwZyq8OAhkchNCQQNgqVa9Zf0qRT1vmVRLD7GHjlwzdH99dEUfg==" rel="nofollow noreferrer">Try it online!</a></p>
 <p>Inserts one hexagon at a time in clockwise order: <a href="https://ngn.codeberg.page/k#eJwFwUEOQDAQAMA7B1+gxGLR0i2qcXDwCiucvKEJ/m7mnp9LzSCY5SsK/S5T5ct2dy53aGJKibWlcbDK9ObgwqPHBCg2JTI2hJZr2Z3gUxD1tmZhJL4guEG7H7siFCw=" rel="nofollow noreferrer">&quot;animation&quot;</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, <s>573</s> 572 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, <s>573</s> 572 bytes</h1>
 <pre><code>h;s!.! / \\!g;x;s/.//;s/./  /g;G;s/\n//p
 s! /!|/!g;y|\\/|/\\|;s/$/|/p;h
 s!\\ /! | !gp
@@ -93,7 +105,7 @@ T;s!\n\( *\)\n\1!!;t;s/\n *\n *//p;tk
 <p><a href="https://tio.run/##TVJBboNADLzvK9YSQikHrDQ3/IB8ILe4kYgagRQF0ZBDK/nvdGxImxW72h0PnmGW6fI5z71MVFPmrEqdfMvENXOsOXMne2x1YB7TBBIZg/RjqmysaigW2I3So6wKQrZM3ZjQB3QDH0dpWhwLEMhhI4DezzWNMsaqbHUF7b07qnVTV/qmg25Jt@a9jdxDjHD7BzJeK3Xwh0FZcYMVo12XDiEap1CE@k4Od2cGuGBouJNzn@B1hJUTRPjWibvMagaPZTgF1vQS9Uebmju42XSAhWz87Jl1k@F@VYWxp4ZuFwsk50tqri4UOd8k8nOBJSWLvVGXmovXhuNJh4@qoLKkSOh4ygAo0/v6iYgqRCMykkdcHABMXJ88rql5FVkyBG18NcHQ9UsIQ86oIcmUmi//JTAKLkvkMs9tm9plPtf/8Qs" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 <p>this one doesn't work yet (the last line of cubes is proving particularly hard to measure) but doing it this way might make it easier to golf.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 41 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 41 bytes</h1>
 <pre><code>ＮθＦ²Ｆ³Ｆθ«Ｆ³Ｍ∨μ¹✳⁺×⁴ι×μ⁻¹κＰ↑”{⊟∨÷ＩＤＲ▶#⟲⁹⁰e
 </code></pre>
 <p><a href="https://tio.run/##NUu7DoIwFJ3hK26YbpMaAjrp6uKAMuh2FyQ1NpYWSssifnstPs5y3u29sa1pVAgH3Xt39N1VWBzYLr0ZC1gy@PD6xwODZ5r8o8pMAk8WOw4F47CXVrROGo218iOeZSdG3HCQsfuaOKykjl3B4cEW7NKk8srJ2krtcHvpOWQwz6SJgCgnvegcciLSMc/i4RVCGVaTegM" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Uses the alternative input scheme where the input is a sixth of the number of cubes. Explanation:</p>
