--- a/q/274051.html
+++ b/q/274051.html
@@ -26,14 +26,31 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>166</td><td>Ruby</td><td>240710T194631Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274063#274063">Level Ri</a></td></tr>
-<tr d-ix="1"><td>239</td><td>Python 3.8 prerelease</td><td>240710T191252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274062#274062">squarero</a></td></tr>
+<tr d-ix="0"><td>233</td><td>Python 3.8 prerelease</td><td>240710T191252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274062#274062">squarero</a></td></tr>
+<tr d-ix="1"><td>166</td><td>Ruby</td><td>240710T194631Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274063#274063">Level Ri</a></td></tr>
 <tr d-ix="2"><td>182</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
 <tr d-ix="3"><td>079</td><td>K ngn/k</td><td>240710T125605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274058#274058">ovs</a></td></tr>
 <tr d-ix="4"><td>572</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
 <tr d-ix="5"><td>041</td><td>Charcoal</td><td>240710T073253Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274054#274054">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 166 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 314 </s> <s> 259 </s> <s> 239 </s> 233 bytes</h1>
+<p><em>-55 bytes by encoding the character positions as a list.</em><br />
+<em>-20 bytes by <s>cheating</s> returning a 2D list, thanks to noodle person.</em><br />
+<em>-6 bytes by using unprintables.</em></p>
+
+<pre class="lang-python prettyprint-override"><code>def f(n):
+ l=[13*n*[' ']for i in range(10*n)];x,y=2*n,0
+ for d in zip([8,6,2,0,2,6],[0,3,3,0,-3,-3]):
+  for s in range(n):
+   for N,t in enumerate(map(ord,'&#3;&#1;&#5;\12&#6;&#8;&#12;&#17;&#16;&#18;&#9;&#14;')):l[y+t//5][x+t%5]='\/||'[N%4]
+   x+=d[0]-4;y+=d[1]
+ return l
+</code></pre>
+<p>First example is inputted as 1.<br />
+The <code>\12</code> in the unprintable string is literal.</p>
+<p><a href="https://tio.run/##RY3vaoMwFMUZY2OTMbY9QWCUJHo7o7altPgKfYGYD4Jxc9irZCno6Lu7RD/s/oHD4fA7/Wi/Osz2vZmmStekZsgPAWlzmWQhhpISqurOkIY0SEyJn5olIkSujgOMeRoiiID4QOUDv03P5B52kIJwv1MgBWRuBawzd8qz5/jPP28uXNwTWO9rvJy1Ka1m57JnnamA3t7cFUl6//D0@vL2@Ew5P7RyjGwcb5UcIrvaqpwW8fVK5Wm1UZ43RHklhVpvjqNXiTONtheDpJ3eSW8atKxmKefBommB9OO7a3AupYuGmiXczfQH" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 166 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;n{s=(' '*(w=16*n)+$/)*w
 v=w*~w/2
@@ -44,21 +61,6 @@ s}
 <p><a href="https://tio.run/##HYxNDoMgGET3noJF/UMoAbGrfr0IsmlSE9GapqikEb06JWaSmZe3mO/y/IUOAn1Mm4UiRzkuHPAbnsrqwkrskhUcPhwTSSFktNe5f7/s5ntfGOhTWd55lq0VKOpwTTmRJG7VnM0JleT0jVY9k2zSiVUrNfGQHgOYlNZMkBFqOmChIWeoRci3iHmPYlofIVcGN2TUe2L38FlmizoldPgD" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 <p>Function that returns a newline separated string.</p>
 <p>Starts with a blank newline separated string, then adds one cube at a time, each cube built from 4 lines.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 314 </s> <s> 259 </s> 239 bytes</h1>
-<p><em>-55 bytes by encoding the character positions as a list.</em><br />
-<em>-20 bytes by <s>cheating</s> returning a 2D list, thanks to noodle person.</em></p>
-
-<pre class="lang-python prettyprint-override"><code>def f(n):
- l=[13*n*[' ']for i in range(10*n)];x,y=2*n,0
- for d in zip([8,6,2,0,2,6],[0,3,3,0,-3,-3]):
-  for s in range(n):
-   for N,t in enumerate([3,1,5,10,6,8,12,17,16,18,9,14]):l[y+t//5][x+t%5]='\/||'[N%4]
-   x+=d[0]-4;y+=d[1]
- return l
-</code></pre>
-<p>First example is inputted as 1.</p>
-<p><a href="https://tio.run/##RY3RioMwEEXf@xV5KUadYsao67b4C/2B2TwUjLuCO5VsClr67zZpH5aZgcvhcmZe/c@VdTu7bevtIAbJ6XEnpo5QZ5xRIhIzXJ0YxcjCXfjbSlQZp@a0wNqVGYPaiVjoY@E@zpJaaKAEFa4xQAp0GAUHHdZE96v@9@97PXzTM/jILd9@rbt4K0kDQg2ogrMFLAE/ABvAFj4Bq6CbaM19UdSGltzva9MlX8XjkdB5X5loXfKuJ2UO1WmNCQN01t8ci2mb3cheDrJM0@0J" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1>JavaScript (ES6), 182 bytes</h1>
 <p>Builds the output character by character.</p>
