--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240710T195526Z
+"   /golfscore                                      20240710T200347Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/274061.html">o y u (or and or)                               : 0274061</a>
 <a href="q/274051.html">A Ring of Cubes                                 : 0274051</a>
 <a href="q/66197.html">Is it a pangram?                                : 0066197</a>
 <a href="q/177221.html">String rotation - output string repeatedly movin: 0177221</a>
