--- a/q/274018.html
+++ b/q/274018.html
@@ -26,18 +26,31 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>054</td><td>Python</td><td>240708T170630Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274027#274027">Mukundan</a></td></tr>
-<tr d-ix="1"><td>013</td><td>Jelly</td><td>240710T020442Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274050#274050">Jonathan</a></td></tr>
-<tr d-ix="2"><td>019</td><td>05AB1E</td><td>240709T080208Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274038#274038">Kevin Cr</a></td></tr>
-<tr d-ix="3"><td>nan</td><td>Vyxal</td><td>240709T051457Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274035#274035">lyxal</a></td></tr>
-<tr d-ix="4"><td>051</td><td>JavaScript ES6</td><td>240708T161437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274023#274023">Arnauld</a></td></tr>
-<tr d-ix="5"><td>023</td><td>Charcoal</td><td>240708T225518Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274032#274032">Neil</a></td></tr>
-<tr d-ix="6"><td>076</td><td>Google Sheets</td><td>240708T184726Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274028#274028">z..</a></td></tr>
-<tr d-ix="7"><td>076</td><td>Python 3.8 prerelease</td><td>240708T160948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274022#274022">squarero</a></td></tr>
-<tr d-ix="8"><td>030</td><td>sed r</td><td>240708T164928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274026#274026">guest430</a></td></tr>
-<tr d-ix="9"><td>031</td><td>Perl 5 p</td><td>240708T162921Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274024#274024">Xcali</a></td></tr>
+<tr d-ix="0"><td>070</td><td>Haskell</td><td>240710T211107Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274066#274066">DPD-</a></td></tr>
+<tr d-ix="1"><td>054</td><td>Python</td><td>240708T170630Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274027#274027">Mukundan</a></td></tr>
+<tr d-ix="2"><td>013</td><td>Jelly</td><td>240710T020442Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274050#274050">Jonathan</a></td></tr>
+<tr d-ix="3"><td>019</td><td>05AB1E</td><td>240709T080208Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274038#274038">Kevin Cr</a></td></tr>
+<tr d-ix="4"><td>nan</td><td>Vyxal</td><td>240709T051457Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274035#274035">lyxal</a></td></tr>
+<tr d-ix="5"><td>051</td><td>JavaScript ES6</td><td>240708T161437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274023#274023">Arnauld</a></td></tr>
+<tr d-ix="6"><td>023</td><td>Charcoal</td><td>240708T225518Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274032#274032">Neil</a></td></tr>
+<tr d-ix="7"><td>076</td><td>Google Sheets</td><td>240708T184726Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274028#274028">z..</a></td></tr>
+<tr d-ix="8"><td>076</td><td>Python 3.8 prerelease</td><td>240708T160948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274022#274022">squarero</a></td></tr>
+<tr d-ix="9"><td>030</td><td>sed r</td><td>240708T164928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274026#274026">guest430</a></td></tr>
+<tr d-ix="10"><td>031</td><td>Perl 5 p</td><td>240708T162921Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274024#274024">Xcali</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>69</s> <s>62</s> <s>60</s> <s>58</s> <s>55</s></sup> 54 bytes</h1>
+<div id="pu0" class="pu"><h1>Haskell, 70 bytes</h1>
+<pre class="lang-haskell prettyprint-override"><code>f=g.map((`elem`&quot;yuiophjklnm&quot;).toLower)
+g(x:y:z)=x/=y&amp;&amp;g(y:z)
+g x=x/=[]
+</code></pre>
+<p><a href="https://play.haskell.org/saved/XOf368tg" rel="nofollow noreferrer">Try it online!</a></p>
+<ul>
+<li>First we map each letter to a boolean based on the hand</li>
+<li>The we assert the sequence is alternate</li>
+<li>The base cases of 0 and 1 elements are handled by the last line</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>69</s> <s>62</s> <s>60</s> <s>58</s> <s>55</s></sup> 54 bytes</h1>
 <p>-7 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a>. I independently arrived at a similar solution (only the first -4 though) since I didn't notice their comment for a while.<br />
 -1 byte thanks to <a href="https://codegolf.stackexchange.com/users/101374/albert-lang">@Albert.Lang</a></p>
 <p>Takes input as a bytestring</p>
@@ -45,13 +58,13 @@
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=dZDNSgMxFIVxO09xCVQSmCm19acUplCwiqBTsUIXtYvYydC0aSZOMtgi-iJuuqlP4Mvo05j52dROLySB851z7yWfX2ptZrHcbCPw4Wmbmshr_5wLunwOKaxc6bfOLtrN00ajI5jEb1h2_A9Jut15rdU8PoniBObAJazeSa1Zpr8zVXDJMhArG2uQjgO2uFQusJWyo5ZUYW2Suj3cipm9rpXgBiMPEZLbC2d--4BMkjLk5CBOjQURtv3qTE7jkOEyohIuDR6jq97NLXIB3feGQzQZlz1sbuJCwlSSRYnlXte6rEyK3Te_R229YMrwKddLyMsrnmy80w8uB6O7fvAI--wlpdJws4YKFnKtmACoYgu6pgtdzSjs1g6jlSyiQjPHMG0OwtHDILg-mJxx_cqFiCgXe_DfOjuw-ME_" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ŒlØqiþ§&gt;5IẠ«L
 </code></pre>
 <p>A monadic Link that accepts a list of characters from <code>A-Za-z</code> and yields <code>1</code> if ping-pong or <code>0</code> otherwise.</p>
 <p><strong><a href="https://tio.run/##ASkA1v9qZWxsef//xZJsw5hxacO@wqc@NUnhuqDCq0z///8iRU5ET1dNRU5UIg" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> Or see the <a href="https://tio.run/##AXQAi/9qZWxsef//xZJsw5hxacO@wqc@NUnhuqDCq0z/4bu0LMOHS8aK4oKsWf//c2tlcHRpY2lzbQpFTkRPV01FTlQKcXVhbnRpdHkKZGlzcGVsCmtheWFrcwphCmFhCnRlc3QKV1JPTkcKdGhpc3dpbGxmYWlsCg" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>20</s> 19 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>20</s> 19 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>žV5δôøJIlδå€üαßIgΘM
 </code></pre>
 <p>Input as a list of characters.<br />
@@ -80,7 +93,7 @@ M        # Push a copy of the largest value of the stack
          # (which is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 121 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 15.125 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 121 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 15.125 bytes</h1>
 <pre><code>[⇩ƛk•5vẇ∑vFT;f¯AI
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBPSIsIiIsIlvih6nGm2vigKI1duG6h+KIkXZGVDtmwq9BSSIsIl1gIGA9Iiwic2tlcHRpY2lzbVxuRU5ET1dNRU5UXG5xdWFudGl0eVxuZGlzcGVsXG5rYXlha3NcbmFcbmFhXG50ZXN0XG5XUk9OR1xudGhpc3dpbGxmYWlsXG5cIlwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -108,7 +121,7 @@ M        # Push a copy of the largest value of the stack
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu4" class="pu"><h1>JavaScript (ES6), 51 bytes</h1>
+<div id="pu5" class="pu"><h1>JavaScript (ES6), 51 bytes</h1>
 <p>Expects an array of characters. Returns <strong>0</strong> for <em>&quot;ping-pong&quot;</em> or <strong>1</strong> for <em>&quot;empty or not ping-pong&quot;</em>.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>a=&gt;a&lt;1|a.some(q=c=&gt;q-(q=/[h-puy]/i.test(c)^(a^=1)))
@@ -122,7 +135,7 @@ M        # Push a copy of the largest value of the stack
 </code></pre>
 <p><a href="https://tio.run/##ddBNC4JAEAbge78ilg7rQYPudurjlEEIHUxhsDUnNzVnLST77fZBheF6G3h4mXnnCBegsMBcmWm2F01kN2RPx8Go9mIzLyv/NrnXXvCbx2gpQYqT0YRZSpkUlswOnDPPLUoVVz4zjEFbIs4oEbnCEOnEhsMuz53ZeruaO@5TNXwuIVWoqpdqeI@UC/lGHSdQQUK9DB/58uC/1C71FiBJ2wra2S6/vsT6ebtZO0vWn46RrihlBCg1u9tXP9PNAw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 23 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 23 bytes</h1>
 <pre><code>∧θ№…01⊕Ｌθ⭆θ№⁺⪫…h¦qωuy↧ι
 </code></pre>
 <p><a href="https://tio.run/##RYzBCgIhGIRfRTz9gkGdO4WnYoOlnkDcHxXsd3W1xac369LAwAzMN8bpbKIOvc/ZU4ELLZAkU7GOopoJqFxcgR9PXLIrmYwvpIILTEi2OEhCCMmeZcD2rtc/O4e6wS16gocmi8DdOOCJj/U@zGv7xinumI3eELz46dx7qpqKL60f3uED" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> if the word is ping-pong, nothing if not. Explanation:</p>
@@ -146,7 +159,7 @@ M        # Push a copy of the largest value of the stack
                         Implicitly print
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1>Google Sheets, 76 bytes</h1>
+<div id="pu7" class="pu"><h1>Google Sheets, 76 bytes</h1>
 <pre class="lang-cpp prettyprint-override"><code>=SORT(AND(1=LEN(IFERROR(SPLIT(REGEXREPLACE(A2,&quot;(?i)[h-puy]&quot;,&quot; $0 &quot;),&quot; &quot;))))) 
 </code></pre>
 <p><a href="https://i.sstatic.net/7AfptWFe.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/7AfptWFe.png" alt="enter image description here" /></a></p>
@@ -156,7 +169,7 @@ M        # Push a copy of the largest value of the stack
 </code></pre>
 <p><a href="https://i.sstatic.net/KPkFMsiG.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/KPkFMsiG.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 89 </s> <s> 83 </s> 76 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 89 </s> <s> 83 </s> 76 bytes</h1>
 <p><em>-6 bytes by walrusing</em> <code>'yuiophjklnm'</code><em>.</em><br />
 <em>-7 bytes by Mukundan314.</em></p>
 
@@ -164,7 +177,7 @@ M        # Push a copy of the largest value of the stack
 </code></pre>
 <p><a href="https://tio.run/##HctLCsMwDADRq2hnCbIp3RRDTtIPuE1NlDiyUFxwcnmn7XJ4jG5lzHK@qLXY31oKy3MIUH2FIAOElBAZWNB877YPZx2nOcniiB44fQGMYjbg7h87K9auXk/@TtTUWApGdOv81sIvXn9fOwA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="noreferrer">sed</a> -r, 30 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="noreferrer">sed</a> -r, 30 bytes</h1>
 <pre><code>/[^h-puy]{2}|[h-puy]{2}|^$/IQ1
 </code></pre>
 <p><a href="https://tio.run/##K05N0U3PK/3/Xz86LkO3oLQyttqotiYawYxT0fcMNPz/vzg7@19@QUlmfl7xf90iAA" rel="noreferrer" title="sed – Try It Online">Try it online!</a></p>
@@ -185,7 +198,7 @@ M        # Push a copy of the largest value of the stack
 </code></pre>
 <p><a href="https://tio.run/##K05N0U3PK/3/Xz86LjUtUzcnL7@gtDK22qi2JhqNH6ei7xlo@P//v/yCksz8vOL/ukUA" rel="noreferrer" title="sed – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://www.perl.org/" rel="noreferrer">Perl 5</a> <code>-p</code>, 31 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://www.perl.org/" rel="noreferrer">Perl 5</a> <code>-p</code>, 31 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>$_&amp;&amp;=!/[h-puy]{2}|[^h-puy]{2}/i
 </code></pre>
