--- a/q/274061.html
+++ b/q/274061.html
@@ -26,16 +26,24 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>049</td><td>Google Sheets</td><td>240710T202030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274065#274065">doubleun</a></td></tr>
-<tr d-ix="1"><td>037</td><td>JavaScript ES6</td><td>240710T200347Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274064#274064">Arnauld</a></td></tr>
+<tr d-ix="0"><td>066</td><td>Python 3.8 prerelease</td><td>240710T235814Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274067#274067">squarero</a></td></tr>
+<tr d-ix="1"><td>049</td><td>Google Sheets</td><td>240710T202030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274065#274065">doubleun</a></td></tr>
+<tr d-ix="2"><td>037</td><td>JavaScript ES6</td><td>240710T200347Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274064#274064">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Google Sheets, 49 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 66 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda s:'ou'[s.strip('hH')[:1]in[*'oóOÓ']or'8'==s[:1]or'11'==s]
+</code></pre>
+<p>The list unpacking could be removed (-3 bytes) if strings matching <code>/^[hH]*$/g</code> could output <code>'u'</code> instead of <code>'o'</code>.</p>
+<p><a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUaHYSj2/VD26WK@4pCizQEM9w0NdM9rKMDYzL1pLPf/wZv/Dk9Vj84vULdRtbYtBEkC2oSGIE/u/oCgzr0QjTUPd4/DmoqLMlHx1Tc3/AA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>Google Sheets, 49 bytes</h1>
 <pre><code>=if(regexmatch(A1,&quot;(?i)^h?[oó]|^11$|^8&quot;),&quot;u&quot;,&quot;o&quot;)
 </code></pre>
 <p>Put the string in cell <code>A1</code> and the formula in <code>B1</code>. Expects that the data is text strings as specified in the question (<strong>Format &gt; Number &gt; Plain text</strong>). Uses <a href="https://codegolf.stackexchange.com/a/274064/119296">Arnauld's regex</a>.</p>
 <p><img src="https://i.sstatic.net/lGQOnHL9.png" alt="screenshot" /></p>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;&quot;ou&quot;[+/^h?[oó]|^11$|^8/i.test(s)]
 </code></pre>
